added header component

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -69,4 +70,36 @@ code {
 }
 .c-nav-cart-link {
   padding: 0 10px;
+}
+
+/* Header */
+.c-header-bg {
+  background-image: url('../src/assets/headerbg.png');
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.c-header-bg {
+  color: #fff;
+  font-family: 'Geologica';
+  text-shadow: 0 2px 4px #535353;
+}
+.c-header-shop-btn button {
+  background-color: #F4E3D2;
+  color: #5A5A5A;
+  padding: 10px 15px;
+  margin-right: 30px;
+  margin-top: 15px;
+  border: unset;
+}
+.c-header-description {
+  display: flex;
+  justify-content: center;
+  height: 80vh;
+  flex-direction: column;
+}
+.c-header1 {
+  font-size: 84px;
+  margin-bottom: 30px;
 }
