--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
   color: #F4E3D2;
   position: fixed;
   width: 100%;
+  z-index: 9999;
 }
 .c-navbar ul {
   display: flex;
@@ -108,10 +109,39 @@ code {
   font-size: 84px;
   margin-bottom: 30px;
 }
+.c-right-column-mobile {
+  display: none;
+}
+@media only screen and (max-width: 991px) {
+  .c-header-description {
+    text-align: center;
+  }
+  .c-left-column {
+    font-size: 14px;
+  }
+  .c-right-column-mobile {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .c-right-column-mobile button {
+    background-color: unset;
+    color: #fff;
+    border: solid 1px #fff;
+  }
+  .c-right-column-mobile button:hover {
+    background-color: #F4E3D2;
+    transition: .2s;
+    color: #272727;
+  }
+  .c-right-column {
+    display: none;
+  }
+}
 
 /* HOT DEALS */
 .c-hotdeals {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 .c-card-relative {
   position: relative;
@@ -146,5 +176,54 @@ code {
 @media only screen and (max-width: 767px) {
   .c-card-relative span {
     font-size: smaller;
+  }
+}
+
+/* Trending */
+.c-trending {
+  background-image: url('../src/assets/people.png');
+  height: 70vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.c-trending-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  padding: 20px 0;
+  color: #fff;
+  font-family: 'Geologica';
+  background-color: #000000ac;
+}
+.c-trending-content h1 {
+  font-size: 76px;
+}
+.c-trending-btn {
+  background-color: #F4E3D2;
+  border: unset;
+  color: #4C4949;
+  font-family: 'Geologica';
+  padding: 15px 50px;
+  font-weight: 500;
+}
+@media only screen and (max-width: 1312px) {
+  .c-trending-content {
+    text-align: center;
+  }
+  .c-trending-content h1 {
+    font-size: 56px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .c-trending {
+    background-image: unset;
+    background-color: #5b2222;
+    height: 40vh;
   }
 }
