--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -301,5 +305,57 @@ code {
     justify-content: center;
     margin-top: 30px;
     display: none;
+  }
+}
+
+/* Footer */
+.c-footer {
+  background-color: #272727;
+  font-family: 'Geologica';
+  padding: 40px 0;
+  margin-top: 40px;
+}
+.c-footer-nav-links span {
+  font-size: 24px;
+  color: #fff;
+}
+.c-footer-nav-links ul {
+  padding-left: 0;
+  margin-top: 10px;
+}
+.c-footer-nav-links li{
+  list-style-type: none;
+  padding: 2px 0;
+}
+.c-footer-nav-links a:hover {
+  text-decoration: underline;
+}
+.c-footer-nav-links a{
+  text-decoration: none;
+  color: #fff;
+  font-weight: 200;
+}
+.c-footer-social-media {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.c-footer-social-media span {
+  font-size: 24px;
+  color: #fff;
+}
+.c-footer-ul {
+  display: flex;
+  margin-top: 20px;
+  text-align: center;
+}
+.c-footer-ul li {
+  padding: 0 10px;
+}
+@media only screen and (max-width: 768px) {
+  .c-footer{
+    text-align: center;
   }
 }
